# drapo

./: .gitignore  CONTRIBUTING.md  DEVELOPMENT.md  DOC.md  DOCUMENTATION.md  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
drapo/: __init__.py  __main__.py  clickfig.py  cursor.py  demo.py  interactive_object.py  line.py  rectangle.py
plov/: __init__.py  clickfig.py  cursor.py  interactive_object.py  line.py  rectangle.py
tests/: test_drapo.py
