[metadata]
name = drapo
author = Olivier Vincent
author_email = ovinc.py@gmail.com
url = https://github.com/ovinc/drapo
description = Interactive features (cursor, draggable lines & rectangles, graphical input, clik-to-make-axes active, etc.) for Matplotlib
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
keywords = interactive, matplotlib, draggable, cursor, line, rectangle, ginput
license_files = LICENSE
license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
include_package_data = True
packages = find:
install_requires =
    matplotlib
    importlib-metadata
setup_requires =
    setuptools_scm
python_requires =
    >=3.6
